# HeartFailure_DL

./: .gitignore  DATASET_PROVENANCE.md  PUBLIC_RELEASE_BLOCKERS.md  README.md  heart_failure.py  pyproject.toml
tests/: test_heart_failure.py
